// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con el componente GifExpertApp debe de mostrar una lista de categorias 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
    <GifGrid
      category="game of thrones"
      key="game of thrones"
    />
  </ol>
</div>
`;

exports[`Pruebas con el componente GifExpertApp debe mostrarse correctamente 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
